namespace java client
service ClientService{
    oneway void finishWrite(1: string message),
}